Added the required filters
